--- a/addplayerdiag.ui
+++ b/addplayerdiag.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>401</width>
     <height>536</height>
    </rect>
   </property>
@@ -311,6 +311,25 @@
     <string>Add Player</string>
    </property>
   </widget>
+  <zorder>mob</zorder>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_6</zorder>
+  <zorder>gender</zorder>
+  <zorder>apply</zorder>
+  <zorder>cancel</zorder>
+  <zorder>fName</zorder>
+  <zorder>lName</zorder>
+  <zorder>dob</zorder>
+  <zorder>email</zorder>
+  <zorder>cal</zorder>
+  <zorder>label_7</zorder>
+  <zorder>famSearch</zorder>
+  <zorder>familyID</zorder>
+  <zorder>label_8</zorder>
  </widget>
  <tabstops>
   <tabstop>fName</tabstop>
