--- a/adddivisiondiag.ui
+++ b/adddivisiondiag.ui
@@ -58,7 +58,7 @@
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="compID_2">
+  <widget class="QLineEdit" name="compID">
    <property name="enabled">
     <bool>false</bool>
    </property>
