--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -77,7 +77,7 @@ background-image: url(:/logo.png);</string>
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <property name="movable">
      <bool>false</bool>
@@ -267,7 +267,7 @@ background-image: url(:/logo.png);</string>
        <string>Edit</string>
       </property>
      </widget>
-     <widget class="QTableView" name="playerTable_2">
+     <widget class="QTableView" name="compTable">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -318,7 +318,7 @@ background-image: url(:/logo.png);</string>
        <string>Add </string>
       </property>
      </widget>
-     <widget class="QPushButton" name="Clear_2">
+     <widget class="QPushButton" name="delete_2">
       <property name="geometry">
        <rect>
         <x>790</x>
@@ -348,6 +348,19 @@ background-image: url(:/logo.png);</string>
       </property>
       <property name="text">
        <string>Quick Search</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="compViewDraw">
+      <property name="geometry">
+       <rect>
+        <x>790</x>
+        <y>110</y>
+        <width>101</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>View Draw</string>
       </property>
      </widget>
     </widget>
@@ -599,7 +612,7 @@ background-image: url(:/logo.png);</string>
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
    <property name="nativeMenuBar">
