--- a/addpaymentdiag.ui
+++ b/addpaymentdiag.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AddCompDiag</class>
- <widget class="QDialog" name="AddCompDiag">
+ <class>AddPaymentDiag</class>
+ <widget class="QDialog" name="AddPaymentDiag">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>389</width>
-    <height>351</height>
+    <width>422</width>
+    <height>425</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>310</y>
+     <x>70</x>
+     <y>390</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -32,10 +32,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>30</y>
-     <width>221</width>
-     <height>20</height>
+     <x>120</x>
+     <y>20</y>
+     <width>191</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -46,44 +46,60 @@
     </font>
    </property>
    <property name="text">
-    <string>Add New Competition</string>
+    <string>Add New Payment</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>80</y>
-     <width>111</width>
+     <x>40</x>
+     <y>100</y>
+     <width>55</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Competition Name</string>
+    <string>Player</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="compName">
+  <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>202</x>
-     <y>80</y>
-     <width>171</width>
-     <height>22</height>
+     <x>40</x>
+     <y>160</y>
+     <width>121</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Registration type</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="sDate">
+  <widget class="QPushButton" name="playerSearch">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>90</y>
+     <width>171</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Player Search</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="playerID">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>130</y>
-     <width>101</width>
+     <x>220</x>
+     <y>110</y>
+     <width>171</width>
      <height>21</height>
     </rect>
    </property>
@@ -91,24 +107,11 @@
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>130</y>
-     <width>121</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Start Date</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="cal">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>110</y>
+     <x>340</x>
+     <y>210</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -120,53 +123,28 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>219</y>
+     <x>40</x>
+     <y>230</y>
      <width>121</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Number of Rounds</string>
+    <string>Active from</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="roundSelector">
-   <property name="geometry">
-    <rect>
-     <x>322</x>
-     <y>220</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>1</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>2</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>3</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QLineEdit" name="divisionID">
+  <widget class="QLineEdit" name="pDate">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>190</y>
-     <width>171</width>
+     <x>220</x>
+     <y>230</y>
+     <width>101</width>
      <height>21</height>
     </rect>
    </property>
@@ -174,31 +152,53 @@
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLineEdit" name="amountPaid">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>180</y>
+     <x>222</x>
+     <y>280</y>
+     <width>171</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>280</y>
      <width>121</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Division</string>
+    <string>Amount Paid</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="divisionSearch">
+  <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>170</y>
+     <x>222</x>
+     <y>160</y>
      <width>171</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Add Division</string>
-   </property>
+   <item>
+    <property name="text">
+     <string>Adult</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Teen</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Child</string>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
@@ -206,7 +206,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>AddCompDiag</receiver>
+   <receiver>AddPaymentDiag</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -222,7 +222,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>AddCompDiag</receiver>
+   <receiver>AddPaymentDiag</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
