--- a/viewdraw.ui
+++ b/viewdraw.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>761</width>
-    <height>511</height>
+    <width>760</width>
+    <height>542</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,9 +19,38 @@
      <x>10</x>
      <y>10</y>
      <width>741</width>
-     <height>491</height>
+     <height>501</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>510</y>
+     <width>321</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="buttonPDFExport">
+      <property name="text">
+       <string>Export To PDF</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="buttonOK">
+      <property name="text">
+       <string>OK</string>
+      </property>
+      <property name="default">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
