--- a/editcompdiag.ui
+++ b/editcompdiag.ui
@@ -111,7 +111,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="id_2"/>
+     <widget class="QLineEdit" name="id"/>
     </item>
    </layout>
   </widget>
@@ -157,7 +157,7 @@
    <property name="geometry">
     <rect>
      <x>322</x>
-     <y>331</y>
+     <y>221</y>
      <width>51</width>
      <height>21</height>
     </rect>
@@ -177,32 +177,6 @@
      <string>3</string>
     </property>
    </item>
-  </widget>
-  <widget class="QLabel" name="label_9">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>291</y>
-     <width>121</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Division</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="divisionSearch">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>281</y>
-     <width>171</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Edit Division</string>
-   </property>
   </widget>
   <widget class="QLineEdit" name="sDate">
    <property name="enabled">
@@ -246,28 +220,12 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="divisionID">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>301</y>
-     <width>171</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="acceptDrops">
-    <bool>false</bool>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>130</y>
-     <width>111</width>
+     <width>121</width>
      <height>16</height>
     </rect>
    </property>
@@ -279,7 +237,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>330</y>
+     <y>220</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -293,51 +251,6 @@
     <rect>
      <x>320</x>
      <y>160</y>
-     <width>51</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-image: url(:/calendar-1559935_960_720.png);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_5">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>240</y>
-     <width>121</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>End Date</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="sDate_2">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>240</y>
-     <width>101</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="acceptDrops">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="cal_2">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>220</y>
      <width>51</width>
      <height>51</height>
     </rect>
